k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: local
  labels:
    app.kubernetes.io/part-of: mukuru
