k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mukuru-http
  namespace: local
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - mukuru.go.local
      secretName: mukuru-http-tls
  rules:
    - host: mukuru.go.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mukuru-http
                port:
                  number: 80
